aether-ui/kubernetes/odk/odk-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: odk
  labels:
    app: odk
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: odk
    spec:
      containers:
      - name: odk
        image: ehealthafrica/aether-odk:0.5.1
        args:
        - start
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /var/www/static
          name: static-assets-volume
        stdin: true
        tty: true
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/static
          name: static-assets-volume
        - name: odk-nginx-config
          mountPath: /etc/nginx/conf.d
      imagePullSecrets:
        - name: regsecret
      volumes:
        - name: static-assets-volume
          emptyDir: {}
        - name: odk-nginx-config
          configMap:
            name: odk-nginx-config
      restartPolicy: Always
