aether-ui/kubernetes/odk/odk-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: odk
  name: odk
spec:
  type: NodePort
  ports:
  - port: 80  
    targetPort: 80
    protocol: TCP
  selector:
    app: odk
